# insight-bridge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  docker-bake.hcl  install.py  prompt_template.yaml  pyproject.toml
app/: app.py  cache_utils.py  llm_inference_pipeline.py  llm_pipeline.py  local_llm_wrapper.py  logger.py  main.py
app/inference/: llm_inference_pipeline.py  local_llm_wrapper.py  worker_server.py
app/llm_worker_provisioners/: __init__.py  base_provisioner.py  hetzner.py  local_docker.py  ssh_tunnel.py
app/server/: backend_pool_singleton.py  cache_utils.py  entrypoint.sh  html_resources.py  main.py  middleware.py  webpage_resources.py
app/server/webpage/: info_box.html  meta_tags.html  notification.js  vapid_generator.py  webpage_resources.py
app/tests/: test_hetzner.py  test_hetzner_delete.py  test_hetzner_send.py  test_hetzner_send_small.py
assets/: service-worker.js
dev_data/: dummy_response.html
documentation/: llm.koenix.de.conf  setup-swap.sh
ingest/: download_arxiv_corpus.py  ingest_and_index.py
prompt-library/: prompt_template-phi-2.yaml
pwa/: manifest.json
