[tool.poetry]
name = "insight-bridge"
version = "0.1.0"
description = ""
authors = ["Ferdinand Koenig <ferdinand@koenix.de>"]
license = "CC BY-NC-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyyaml = ">=6.0.2,<7.0.0"
rich = ">=14.1.0,<15.0.0"

[tool.poetry.group.core]
optional = true

[tool.poetry.group.core.dependencies]
langchain = ">=0.3.27,<0.4.0"
faiss-cpu = ">=1.11.0.post1,<2.0.0"
sentence-transformers = ">=5.0.0,<6.0.0"
huggingface-hub = ">=0.34.0,<0.35.0"
langchain-community = ">=0.3.27,<0.4.0"
langchain-huggingface = ">=0.3.1,<0.4.0"

[tool.poetry.group.ingest]
optional = true

[tool.poetry.group.ingest.dependencies]
requests = "^2.31.0"
feedparser = ">=6.0.11,<7.0.0"
pypdf = ">=5.8.0,<6.0.0"
simpleeval = "^1.0.3"

[tool.poetry.group.inference]
optional = true

[tool.poetry.group.inference.dependencies]
torch = ">=2.7.1,<3.0.0"
transformers = ">=4.48.0"
hf-xet = ">=1.1.5,<2.0.0"
accelerate = ">=1.9.0,<2.0.0"
llama-cpp-python = ">=0.3.4,<0.4.0"

[tool.poetry.group.inference_server]
optional = true

[tool.poetry.group.inference_server.dependencies]
uvicorn = "^0.35.0"
fastapi = "^0.116.1"

[tool.poetry.group.server]
optional = true

[tool.poetry.group.server.dependencies]
gradio = ">=5.38.2,<6.0.0"
docker = "^7.1.0"
httpx = "^0.28.1"
paramiko = "^4.0.0"
aiohttp = "^3.12.15"
requests = "^2.32.4"
sshtunnel = "^0.4.0"
hcloud = "^2.5.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.12.5"
